--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -14,6 +14,10 @@ nav {
     &:active, &:visited {
         color: $color-logo;
     }
+
+    span {
+        color: #000000;
+    }
 }
 
 .page-header {
