--- a/sass/components/_portafolio.scss
+++ b/sass/components/_portafolio.scss
@@ -1,5 +1,5 @@
 .products {
-    background-color: $color-back-portafolio;
+    background-color: $text-banner;
     padding-top: 106px;
     padding-bottom: 82px;
 }
@@ -21,8 +21,7 @@
         border-radius: 4px;
         cursor: pointer;
         border: 0px;
-        height: 38px;
-        padding: 0px;
+        padding: 6px 22px;
 
         &:hover,&:focus {
             color: $text-banner;
@@ -30,26 +29,6 @@
             box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
             border-radius: 4px;
         }
-    }
-
-    &__list:nth-child(1)>&__item {
-        width: 73px;
-    }
-    
-    &__list:nth-child(2)>&__item {
-        width: 128px;
-    }
-    
-    &__list:nth-child(3)>&__item {
-        width: 145px;
-    }
-    
-    &__list:nth-child(4)>&__item {
-        width: 103px;
-    }
-    
-    &__list:nth-child(5)>&__item {
-        width: 130px;
     }
     
     &__list:not(:last-child) {
