--- a/sass/main.css
+++ b/sass/main.css
@@ -55,6 +55,9 @@ nav {
 .logo:active, .logo:visited {
   color: #2196F3;
 }
+.logo span {
+  color: #000000;
+}
 
 .page-header {
   border-bottom: 1px solid #ECECEC;
@@ -160,7 +163,7 @@ nav {
   background-color: #2196F3;
   color: #FFFFFF;
   text-align: center;
-  width: 261px;
+  width: 200px;
   height: 50px;
   background: #2196F3;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
@@ -376,7 +379,7 @@ nav {
   letter-spacing: 0.03em;
   color: #FFFFFF;
   width: 231px;
-  margin-top: 9px;
+  margin-top: 28px;
   margin-bottom: 2px;
 }
 .location__contacts {
@@ -395,6 +398,22 @@ nav {
 }
 .location__data:not(:last-child) {
   margin-bottom: 2px;
+}
+
+.logo-footer {
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
+  text-align: right;
+  letter-spacing: 0.03em;
+  color: #2196F3;
+}
+.logo-footer:active, .logo-footer:visited {
+  color: #2196F3;
+}
+.logo-footer span {
+  color: #FFFFFF;
 }
 
 .networks {
@@ -608,6 +627,7 @@ nav {
   color: rgba(117, 117, 117, 0.5);
 }
 .modal__textarea:focus {
+  border-color: #2196F3;
   outline: none;
 }
 .modal__agree {
@@ -649,6 +669,10 @@ nav {
   color: #757575;
   width: 400.62px;
 }
+.modal__text a {
+  color: #2196F3;
+  text-decoration: underline;
+}
 .modal__button {
   display: flex;
   justify-content: center;
@@ -667,7 +691,7 @@ nav {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   margin: auto;
-  margin-top: 6px;
+  margin-top: 30px;
   cursor: pointer;
 }
 .modal__button:hover {
@@ -694,7 +718,7 @@ nav {
 }
 
 .products {
-  background-color: #E5E5E5;
+  background-color: #FFFFFF;
   padding-top: 106px;
   padding-bottom: 82px;
 }
@@ -716,29 +740,13 @@ nav {
   border-radius: 4px;
   cursor: pointer;
   border: 0px;
-  height: 38px;
-  padding: 0px;
+  padding: 6px 22px;
 }
 .filters__item:hover, .filters__item:focus {
   color: #FFFFFF;
   background: #2196F3;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
-}
-.filters__list:nth-child(1) > .filters__item {
-  width: 73px;
-}
-.filters__list:nth-child(2) > .filters__item {
-  width: 128px;
-}
-.filters__list:nth-child(3) > .filters__item {
-  width: 145px;
-}
-.filters__list:nth-child(4) > .filters__item {
-  width: 103px;
-}
-.filters__list:nth-child(5) > .filters__item {
-  width: 130px;
 }
 .filters__list:not(:last-child) {
   margin-right: 8px;
