--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -5,7 +5,7 @@ nav {
 .logo {
     font-family: $font-logo;
     font-weight: 700;
-    font-size: 26px;
+    font-size: 24px;
     line-height: 1.19;
     text-align: right;
     letter-spacing: 0.03em;
@@ -27,11 +27,12 @@ nav {
         display: flex;
         align-items: center;
         justify-content: space-between;
-        height: 80px;
+        height: 60px;
     }
 }
 
 .links {
+    visibility: hidden;
     display: flex;
     align-items: center;
     margin-left: 93px;
@@ -72,8 +73,8 @@ nav {
 }
 
 .contacts {
+    visibility: hidden;
     display: flex;
-    align-items: center;
 
     &__item {
         display: inline-flex;
@@ -86,7 +87,7 @@ nav {
         }
 
         &:not(:last-child) {
-            margin-right: 30px;
+            margin-right: 40px;
         }
     }
 
@@ -102,5 +103,41 @@ nav {
         line-height: 1.14;
         letter-spacing: 0.02em;
         color: $color-text;
+    }
+}
+
+@media (min-width: 768px) {
+    .contacts {
+        visibility: visible;
+        flex-direction: column;
+        justify-content: flex-start;
+
+        &__item:not(:last-child) {
+                margin-right: 0px;
+                margin-bottom: 10px;
+        }    
+    }
+    .links {
+        visibility: visible;
+    }
+    .page-header {
+        .container {
+            height: 80px;
+        }
+    }
+}
+
+@media (min-width:1200px) {
+    .contacts {
+        flex-direction: row;
+        align-items: center;
+
+        &__item:not(:last-child) {
+            margin-right: 40px;
+            margin-bottom: 0px;
+        }
+    }
+    .logo {
+        font-size: 26px;
     }
 }
