--- a/sass/main.css
+++ b/sass/main.css
@@ -34,11 +34,21 @@ ul {
 }
 
 .container {
-  width: 1200px;
+  width: 450px;
   margin-right: auto;
   margin-left: auto;
 }
 
+@media screen and (min-width: 768px) and (max-width: 1200px) {
+  .container {
+    width: 738px;
+  }
+}
+@media (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
+}
 nav {
   display: flex;
 }
@@ -46,7 +56,7 @@ nav {
 .logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
-  font-size: 26px;
+  font-size: 24px;
   line-height: 1.19;
   text-align: right;
   letter-spacing: 0.03em;
@@ -66,10 +76,11 @@ nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 80px;
+  height: 60px;
 }
 
 .links {
+  visibility: hidden;
   display: flex;
   align-items: center;
   margin-left: 93px;
@@ -104,8 +115,8 @@ nav {
 }
 
 .contacts {
+  visibility: hidden;
   display: flex;
-  align-items: center;
 }
 .contacts__item {
   display: inline-flex;
@@ -116,7 +127,7 @@ nav {
   fill: #2196F3;
 }
 .contacts__item:not(:last-child) {
-  margin-right: 30px;
+  margin-right: 40px;
 }
 .contacts__icon {
   margin-right: 10px;
@@ -131,6 +142,36 @@ nav {
   color: #757575;
 }
 
+@media (min-width: 768px) {
+  .contacts {
+    visibility: visible;
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+  .contacts__item:not(:last-child) {
+    margin-right: 0px;
+    margin-bottom: 10px;
+  }
+  .links {
+    visibility: visible;
+  }
+  .page-header .container {
+    height: 80px;
+  }
+}
+@media (min-width: 1200px) {
+  .contacts {
+    flex-direction: row;
+    align-items: center;
+  }
+  .contacts__item:not(:last-child) {
+    margin-right: 40px;
+    margin-bottom: 0px;
+  }
+  .logo {
+    font-size: 26px;
+  }
+}
 .banner {
   margin-right: auto;
   margin-left: auto;
