--- a/sass/main.scss
+++ b/sass/main.scss
@@ -37,9 +37,21 @@ ul {
 }
 
 .container {
-    width: 1200px;
+    width: 450px;
     margin-right: auto;
     margin-left: auto;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1200px) {
+   .container {
+        width: 738px;
+   }
+}
+
+@media (min-width:1200px) {
+    .container {
+        width: 1200px;
+    }
 }
 
 @import 'components/page-header';
