--- a/sass/components/_banner.scss
+++ b/sass/components/_banner.scss
@@ -3,23 +3,23 @@
     margin-left: auto;
     background-color: $color-background;
     text-align: center;
-    padding-top: 200px;
-    padding-bottom: 200px;
-    max-width: 1600px;
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url('.././images/Image-back.jpg');
+    padding: 118px 0px;
+    max-width: 480px;
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url('.././images/Image-back-phone.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
 
     .title {
         font-weight: 900;
-        font-size: 44px;
+        font-size: 26px;
         line-height: 1.36;
         text-align: center;
         letter-spacing: 0.06em;
         text-transform: uppercase;
         color: $text-banner;
-        margin-top: 0px;
+        width: 360px;
+        margin: auto;
         margin-bottom: 30px;
     }
 
@@ -39,6 +39,26 @@
         cursor: pointer;
         border: 0px;
         padding: 0px;
+    }
+}
+
+@media (min-width: 768px) {
+    .banner {
+        max-width: 768px;
+        background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url('.././images/Image-back-tablet.jpg');
+    }
+}
+
+@media (min-width:1200px) {
+    .banner {
+        padding: 200px 0px;
+        max-width: 1600px;
+        background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url('.././images/Image-back.jpg');
+
+        .title {
+            width: 696px;
+            font-size: 44px;
+        }
     }
 }
 
