--- a/sass/main.scss
+++ b/sass/main.scss
@@ -42,7 +42,7 @@ ul {
     margin-left: auto;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1200px) {
+@media (min-width: 768px) {
    .container {
         width: 738px;
    }
