--- a/sass/components/_banner.scss
+++ b/sass/components/_banner.scss
@@ -42,10 +42,26 @@
     }
 }
 
+@media (min-device-pixel-ratio: 2), 
+    (min-resolution: 192dpi), 
+    (min-resolution: 2dppx) {
+        .banner {
+            background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url('.././images/Image-back-phone-2X.jpg');
+        }
+}
+
 @media (min-width: 768px) {
     .banner {
         max-width: 768px;
         background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url('.././images/Image-back-tablet.jpg');
+    }
+
+    @media (min-device-pixel-ratio: 2),
+        (min-resolution: 192dpi),
+        (min-resolution: 2dppx) {
+        .banner {
+            background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url('.././images/Image-back-tablet-2X.jpg');
+        }
     }
 }
 
@@ -58,6 +74,14 @@
         .title {
             width: 696px;
             font-size: 44px;
+        }
+    }
+
+    @media (min-device-pixel-ratio: 2),
+        (min-resolution: 192dpi),
+        (min-resolution: 2dppx) {
+        .banner {
+            background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url('.././images/Image-back-2X.jpg');
         }
     }
 }
