--- a/sass/components/_service.scss
+++ b/sass/components/_service.scss
@@ -1,49 +1,56 @@
 .service {
-    padding-bottom: 94px;
-
-    &__title {
-        font-weight: 700;
-        font-size: 36px;
-        line-height: 1.17;
-        text-align: center;
-        letter-spacing: 0.03em;
-        color: $color-title;
-        margin-bottom: 55.05px;
-    }
+    display: none;
 }
 
-.list {
-    display: flex;
-    justify-content: space-between;
-
-    &__item {
-        position: relative;
-        overflow: hidden;
-        width: 370px;
-        height: 294px;
-    }
-
-    &__img {
+@media (min-width: 1200px) {
+    .service {
         display: block;
-        max-width: 100%;
-        height: auto;
-    }
+        padding-bottom: 94px;
 
-    &__title {
-        position: absolute;
-        font-family: $font-primary;
-        font-style: normal;
-        font-weight: 700;
-        font-size: 14px;
-        line-height: 1.14;
-        letter-spacing: 0.03em;
-        bottom: 0;
+        &__title {
+            font-weight: 700;
+            font-size: 36px;
+            line-height: 1.17;
+            text-align: center;
+            letter-spacing: 0.03em;
+            color: $color-title;
+            margin-bottom: 55.05px;
+        }
+    }
+    
+    .list {
         display: flex;
-        width: 100%;
-        height: 70px;
-        justify-content: center;
-        align-items: center;
-        background-color: rgba(47, 48, 58, 0.8);
-        color: $text-banner;
+        justify-content: space-between;
+    
+        &__item {
+            position: relative;
+            overflow: hidden;
+            width: 370px;
+            height: 294px;
+        }
+    
+        &__img {
+            display: block;
+            max-width: 100%;
+            height: auto;
+        }
+    
+        &__title {
+            position: absolute;
+            font-family: $font-primary;
+            font-style: normal;
+            font-weight: 700;
+            font-size: 14px;
+            line-height: 1.14;
+            letter-spacing: 0.03em;
+            bottom: 0;
+            display: flex;
+            width: 100%;
+            height: 70px;
+            justify-content: center;
+            align-items: center;
+            background-color: rgba(47, 48, 58, 0.8);
+            color: $text-banner;
+        }
     }
 }
