--- a/sass/main.css
+++ b/sass/main.css
@@ -356,12 +356,11 @@ nav {
 }
 .team {
   background-color: #F5F4FA;
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding: 60px 0;
 }
 .team__title {
   font-weight: 700;
-  font-size: 36px;
+  font-size: 28px;
   line-height: 1.17;
   text-align: center;
   letter-spacing: 0.03em;
@@ -370,8 +369,8 @@ nav {
 
 .cards {
   display: flex;
-  margin-top: 50px;
-  justify-content: space-between;
+  flex-wrap: wrap;
+  margin-top: 30px;
 }
 .cards__item {
   width: 270px;
@@ -419,6 +418,18 @@ nav {
   fill: #FFFFFF;
 }
 
+@media (min-width: 1200px) {
+  .team {
+    padding: 94px 0;
+  }
+  .team__title {
+    font-size: 36px;
+  }
+  .cards {
+    margin-top: 50px;
+    justify-content: space-between;
+  }
+}
 .clients {
   margin-top: 59px;
   margin-bottom: 151px;
