--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,10 +1,9 @@
 .clients {
-    margin-top: 59px;
-    margin-bottom: 151px;
+    margin: 60px 0;
 
     &__title {
         font-weight: 700;
-        font-size: 36px;
+        font-size: 28px;
         line-height: 1.17;
         text-align: center;
         letter-spacing: 0.03em;
@@ -12,9 +11,10 @@
     }
 
     &__logo {
-        margin-top: 44.02px;
+        margin-top: 30px;
         display: flex;
-        justify-content: space-between;
+        flex-wrap: wrap;
+        gap: 30px;
 
         li {
             display: inline-flex;
@@ -25,7 +25,7 @@
 
     &__icon {
         box-sizing: content-box;
-        padding: 14.09px 32px;
+        padding: 16px 52px;
         outline: 1px solid $fill-icon;
         border-radius: 4px;
         fill: $fill-icon;
@@ -33,6 +33,31 @@
         &:hover, &:focus {
             outline: 1px solid $color-logo;
             fill: $color-logo;
+        }
+    }
+}
+
+@media (min-width: 768px) {
+    .clients {
+        &__icon {
+            padding: 16px 60px;
+        }
+    }
+    
+}
+
+@media (min-width: 1200px) {
+    .clients {
+        margin: 94px 0;
+        &__title {
+            font-size: 36px;
+        }
+        &__logo {
+            margin-top: 50px;
+            justify-content: space-between;
+        }
+        &__icon {
+            padding: 16px 32px;
         }
     }
 }
