--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -16,13 +16,14 @@
     display: flex;
     flex-wrap: wrap;
     margin-top: 30px;
+    gap:30px;
 
     &__item {
-        // width: 270px;
+        width: 450px;
         background-color: $text-banner;
         box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
         border-radius: 0px 0px 4px 4px;
-        padding-bottom: 30px;
+        padding-bottom: 24px;
     }
 
     &__person {
@@ -70,10 +71,24 @@
 }
 
 @media (min-width: 768px) {
-
+    .cards {
+        &__item {
+            width: 354px;
+        }
+    }
 }
 
 @media (min-width: 1200px) {
+    .cards {
+        margin-top: 50px;
+        justify-content: space-between;
+            
+        &__item {
+            width: 270px;
+            padding-bottom: 30px;
+        }
+    }
+
     .team {
         padding: 94px 0;
 
@@ -81,8 +96,5 @@
             font-size: 36px;
         }
     } 
-    .cards {
-        margin-top: 50px;
-        justify-content: space-between;
-    }
+    
 }
