--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -11,3 +11,4 @@ $text-banner: #FFFFFF;
 $background-filter: #F5F4FA;
 $color-back-portafolio: #E5E5E5;
 $fill-icon: #AFB1B8;
+$color-text-footer: rgba(255, 255, 255, 0.6);
