--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -30,7 +30,7 @@
 
 .modal {
     position: relative;
-    width: 528px;
+    width: 450px;
     background-color: $text-banner;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
@@ -182,11 +182,13 @@
         font-style: normal;
         font-weight: 700;
         font-size: 16px;
-        line-height: 30px;
+        line-height: 1.88;
         align-items: center;
         text-align: center;
         letter-spacing: 0.06em;
-        padding: 10px 75px;
+        width: 200px;
+        height: 50px;
+        padding: 0;
         color: $text-banner;
         background-color: $color-logo;
         border: none;
@@ -220,5 +222,11 @@
             fill: $color-logo;
             outline: none;
         }
+    }
+}
+
+@media (min-width: 1200px) {
+    .modal {
+        width: 528px;
     }
 }
