--- a/sass/main.css
+++ b/sass/main.css
@@ -897,7 +897,7 @@ nav {
 
 .modal {
   position: relative;
-  width: 528px;
+  width: 450px;
   background-color: #FFFFFF;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
@@ -1041,11 +1041,13 @@ nav {
   font-style: normal;
   font-weight: 700;
   font-size: 16px;
-  line-height: 30px;
+  line-height: 1.88;
   align-items: center;
   text-align: center;
   letter-spacing: 0.06em;
-  padding: 10px 75px;
+  width: 200px;
+  height: 50px;
+  padding: 0;
   color: #FFFFFF;
   background-color: #2196F3;
   border: none;
@@ -1078,6 +1080,11 @@ nav {
   outline: none;
 }
 
+@media (min-width: 1200px) {
+  .modal {
+    width: 528px;
+  }
+}
 .products {
   background-color: #FFFFFF;
   padding-top: 106px;
