--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -9,17 +9,20 @@
         text-align: center;
         letter-spacing: 0.03em;
         color: $color-title;
+        margin-bottom: 30px;
     }
 }
 
 .cards {
     display: flex;
     flex-wrap: wrap;
-    margin-top: 30px;
-    gap:30px;
+    gap: 30px;
+
+    &__img {
+        display: block;
+    }
 
     &__item {
-        width: 450px;
         background-color: $text-banner;
         box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
         border-radius: 0px 0px 4px 4px;
@@ -49,7 +52,6 @@
     display: flex;
     justify-content: center;
     gap: 10px;
-    height: 44px;
     margin-top: 16px;
 
     li {
@@ -63,7 +65,8 @@
         fill: $fill-icon;
         cursor: pointer;
 
-        &:hover,&:focus {
+        &:hover,
+        &:focus {
             background-color: $color-logo;
             fill: $text-banner;
         }
@@ -73,18 +76,15 @@
 @media (min-width: 768px) {
     .cards {
         &__item {
-            width: 354px;
+            flex-basis: calc((100% - 30px)/2);
         }
     }
 }
 
 @media (min-width: 1200px) {
-    .cards {
-        margin-top: 50px;
-        justify-content: space-between;
-            
+    .cards {       
         &__item {
-            width: 270px;
+            flex-basis: calc((100% - 90px)/4);
             padding-bottom: 30px;
         }
     }
@@ -94,7 +94,7 @@
 
         &__title {
             font-size: 36px;
+            margin-bottom: 50px;
         }
-    } 
-    
+    }
 }
