--- a/sass/main.css
+++ b/sass/main.css
@@ -46,7 +46,7 @@ ul {
 }
 @media (min-width: 1200px) {
   .container {
-    width: 1200px;
+    width: 1170px;
   }
 }
 nav {
@@ -241,16 +241,19 @@ nav {
 .descriptions {
   display: flex;
   flex-wrap: wrap;
-  padding: 60px 0;
-  justify-content: space-between;
   gap: 30px;
+  padding: 60px 0;
+}
+.descriptions li {
+  flex-basis: 100%;
 }
 .descriptions__icon {
   box-sizing: content-box;
-  padding: 25px 190px;
   background-color: #F5F4FA;
+  padding: 25px 0;
   border-radius: 4px;
   margin-bottom: 30px;
+  width: 100%;
 }
 .descriptions__title {
   font-family: "Roboto", sans-serif;
@@ -275,10 +278,7 @@ nav {
 
 @media (min-width: 768px) {
   .descriptions li {
-    width: 354px;
-  }
-  .descriptions__icon {
-    padding: 25px 142px;
+    flex-basis: calc((100% - 30px) / 2);
   }
   .descriptions__title {
     text-align: start;
@@ -289,10 +289,7 @@ nav {
     padding: 94px 0;
   }
   .descriptions li {
-    width: 270px;
-  }
-  .descriptions__icon {
-    padding: 25px 100px;
+    flex-basis: calc((100% - 90px) / 4);
   }
 }
 .service {
@@ -315,18 +312,15 @@ nav {
   }
   .list {
     display: flex;
-    justify-content: space-between;
+    gap: 30px;
   }
   .list__item {
     position: relative;
     overflow: hidden;
-    width: 370px;
-    height: 294px;
+    flex-basis: calc((100% - 60px) / 3);
   }
   .list__img {
     display: block;
-    max-width: 100%;
-    height: auto;
   }
   .list__title {
     position: absolute;
@@ -357,16 +351,18 @@ nav {
   text-align: center;
   letter-spacing: 0.03em;
   color: #212121;
+  margin-bottom: 30px;
 }
 
 .cards {
   display: flex;
   flex-wrap: wrap;
-  margin-top: 30px;
   gap: 30px;
 }
+.cards__img {
+  display: block;
+}
 .cards__item {
-  width: 450px;
   background-color: #FFFFFF;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
@@ -393,7 +389,6 @@ nav {
   display: flex;
   justify-content: center;
   gap: 10px;
-  height: 44px;
   margin-top: 16px;
 }
 .icons li {
@@ -413,16 +408,12 @@ nav {
 
 @media (min-width: 768px) {
   .cards__item {
-    width: 354px;
+    flex-basis: calc((100% - 30px) / 2);
   }
 }
 @media (min-width: 1200px) {
-  .cards {
-    margin-top: 50px;
-    justify-content: space-between;
-  }
   .cards__item {
-    width: 270px;
+    flex-basis: calc((100% - 90px) / 4);
     padding-bottom: 30px;
   }
   .team {
@@ -430,6 +421,7 @@ nav {
   }
   .team__title {
     font-size: 36px;
+    margin-bottom: 50px;
   }
 }
 .clients {
@@ -450,16 +442,17 @@ nav {
   gap: 30px;
 }
 .clients__logo li {
-  display: inline-flex;
-  align-items: center;
+  flex-basis: calc((100% - 30px) / 2);
   cursor: pointer;
 }
 .clients__icon {
+  display: block;
   box-sizing: content-box;
-  padding: 16px 52px;
+  padding: 16px 0;
   outline: 1px solid #AFB1B8;
   border-radius: 4px;
   fill: #AFB1B8;
+  width: 100%;
 }
 .clients__icon:hover, .clients__icon:focus {
   outline: 1px solid #2196F3;
@@ -467,8 +460,8 @@ nav {
 }
 
 @media (min-width: 768px) {
-  .clients__icon {
-    padding: 16px 60px;
+  .clients__logo li {
+    flex-basis: calc((100% - 60px) / 3);
   }
 }
 @media (min-width: 1200px) {
@@ -480,10 +473,9 @@ nav {
   }
   .clients__logo {
     margin-top: 50px;
-    justify-content: space-between;
   }
-  .clients__icon {
-    padding: 16px 32px;
+  .clients__logo li {
+    flex-basis: calc((100% - 150px) / 6);
   }
 }
 .page-footer {
